Finish the WIP for backend error handling. Now have some good templates for DAL errors, service layer errors, and how controller should handle. Tests passing.
