# src/spec/openapi.bundled.yaml
@@ -141,6 +141,8 @@ paths:
           $ref: '#/components/responses/400BadRequest'
         '401':
           $ref: '#/components/responses/401NotAuthorized'
+        '404':
+          $ref: '#/components/responses/404NotFound'
         default:
           description: Unexpected error
           content:
@@ -174,6 +176,8 @@ paths:
           $ref: '#/components/responses/400BadRequest'
         '401':
           $ref: '#/components/responses/401NotAuthorized'
+        '404':
+          $ref: '#/components/responses/404NotFound'
         default:
           description: Unexpected error
           content:
@@ -381,6 +385,12 @@ components:
             $ref: '#/components/schemas/ErrorResponse'
     401NotAuthorized:
       description: Not authorized
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorResponse'
+    404NotFound:
+      description: Resource not found
       content:
         application/json:
           schema:
